--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="todo-app">
-            <h2>To-do List <img src="images/icon.png"></h2>
+            <h2>To-do List <img src="icon.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your task">
                 <button onclick="addTask()">Add</button>
